[package]
name = "pallet-evm-utility-macro"
version = "1.1.1"
authors = ["TraceLabs", "Acala Developers"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.20"
syn = { version = "1.0.96", features = [
    "full",
    "fold",
    "extra-traits",
    "visit",
] }
proc-macro2 = "1.0.40"
pallet-evm-utility = { path = ".." }
